tp_web_deployment_support/osds_data_UAT/sw_gss_deploy/local/manifests/logging/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: logging-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Content-Type-Options: nosniff";
spec:
  rules:
# simple fanout
  - host: kibana.dc-gisuat-webm1
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
  tls:
    - hosts:
      - kibana.dc-gisuat-webm1
      secretName: logging-ingress-tls
